force-app/main/default/objects/BeatPlan__c/BeatPlan__c.object-meta.xml
<CustomObject>
    <description>Monthly beat planning for field sales</description>
    <label>Beat Plan</label>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Beat Plan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>