force-app/main/default/objects/BeatPlan__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <type>Date</type>
</CustomField>