force-app/main/default/objects/BeatPlan__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>