force-app/main/default/objects/BeatPlan__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <referenceTo>Territory2</referenceTo>
    <relationshipLabel>Related Records</relationshipLabel>
    <relationshipName>Related_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>Lookup</type>
</CustomField>